--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -142,7 +142,8 @@
                     android:id="@+id/see_more_label" app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="12dp"
-                    android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/recentLinearLayout"/>
+                    android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/recentLinearLayout"
+                    android:visibility="invisible"/>
         </android.support.constraint.ConstraintLayout>
         <android.support.constraint.ConstraintLayout
                 android:id="@+id/hints_container"
