--- a/app/src/main/res/layout/nav_header_week_view.xml
+++ b/app/src/main/res/layout/nav_header_week_view.xml
@@ -14,23 +14,31 @@
         android:id="@+id/header_layout_week"
         android:gravity="bottom">
 
-    <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="@dimen/nav_header_vertical_spacing"
-            app:srcCompat="@mipmap/ic_launcher_round"
-            android:contentDescription="@string/nav_header_desc"
-            android:id="@+id/imageView"/>
+    <android.support.v7.widget.CardView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:elevation="12dp"
+            android:id="@+id/view2"
+            app:cardCornerRadius="40dp"
+    >
+        <ImageView
+                android:layout_height="80dp"
+                android:layout_width="match_parent"
+                android:id="@+id/imageView1"
+                android:src="@drawable/avatar"
+                android:scaleType="centerCrop" android:contentDescription="Header Image"/>
+    </android.support.v7.widget.CardView>
 
     <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:id="@+id/name_text_view"/>
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:id="@+id/name_text_view"
+            android:textStyle="bold"/>
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/email_text_view"/>
+            android:id="@+id/email_text_view" android:textStyle="bold"/>
 
 </LinearLayout>
