refactor all manually set strings to strings.xml strings

--- a/app/src/main/res/layout/nav_header_day_view.xml
+++ b/app/src/main/res/layout/nav_header_day_view.xml
@@ -26,7 +26,7 @@
                 android:layout_width="match_parent"
                 android:id="@+id/imageView1"
                 android:src="@drawable/avatar"
-                android:scaleType="centerCrop" android:contentDescription="Header Image"/>
+                android:scaleType="centerCrop" android:contentDescription="@string/avatar_icon"/>
     </android.support.v7.widget.CardView>
 
     <TextView
