--- a/app/src/main/res/layout/activity_delete_account.xml
+++ b/app/src/main/res/layout/activity_delete_account.xml
@@ -11,7 +11,7 @@
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
             tools:context=".DeleteAccountActivity">
 
@@ -43,7 +43,6 @@
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                 app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@+id/enter_details_label"/>
-        =
         <android.support.v7.widget.AppCompatEditText
                 android:id="@+id/password_input"
                 android:layout_width="0dp"
