--- a/app/src/main/res/layout/activity_measurement_view.xml
+++ b/app/src/main/res/layout/activity_measurement_view.xml
@@ -70,7 +70,6 @@
                     android:layout_width="wrap_content"
                     android:textAlignment="center"
                     android:layout_alignParentStart="true"
-                    android:layout_alignParentLeft="true"
                     android:layout_height="wrap_content"
                     android:id="@+id/food_text_view"
                     android:textSize="14sp" app:layout_constraintTop_toTopOf="parent"
@@ -90,11 +89,10 @@
                 app:layout_constraintEnd_toEndOf="@+id/food_layout" android:layout_marginTop="20dp"
                 app:layout_constraintTop_toBottomOf="@+id/food_layout" app:layout_constraintHorizontal_bias="1.0">
             <TextView
-                    android:text="Recent Physical Activity"
+                    android:text="@string/recent_exercise"
                     android:layout_width="wrap_content"
                     android:textAlignment="center"
                     android:layout_alignParentStart="true"
-                    android:layout_alignParentLeft="true"
                     android:layout_height="wrap_content"
                     android:id="@+id/exercise_text_view"
                     android:textSize="14sp" app:layout_constraintTop_toTopOf="parent"
@@ -119,7 +117,6 @@
                     android:layout_width="69dp"
                     android:textAlignment="center"
                     android:layout_alignParentStart="true"
-                    android:layout_alignParentLeft="true"
                     android:layout_height="wrap_content"
                     android:id="@+id/symptoms_title"
                     android:textSize="14sp"
@@ -277,7 +274,6 @@
                     android:layout_width="wrap_content"
                     android:textAlignment="center"
                     android:layout_alignParentStart="true"
-                    android:layout_alignParentLeft="true"
                     android:layout_height="wrap_content"
                     android:id="@+id/medications_title"
                     android:textSize="14sp"
@@ -319,7 +315,6 @@
                     android:layout_width="wrap_content"
                     android:textAlignment="center"
                     android:layout_alignParentStart="true"
-                    android:layout_alignParentLeft="true"
                     android:layout_height="16dp"
                     android:id="@+id/notes_title"
                     android:textSize="14sp"
@@ -328,7 +323,7 @@
                     android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>
         </android.support.constraint.ConstraintLayout>
         <Button
-                android:text="Delete"
+                android:text="@string/delete"
                 android:layout_width="0dp"
                 android:textAllCaps="false"
                 android:textSize="14sp"
