--- a/app/src/main/res/layout/activity_new_measurement.xml
+++ b/app/src/main/res/layout/activity_new_measurement.xml
@@ -43,7 +43,6 @@
                         android:layout_width="92dp"
                         android:textAlignment="center"
                         android:layout_alignParentStart="true"
-                        android:layout_alignParentLeft="true"
                         android:layout_height="wrap_content"
                         android:id="@+id/blood_glucose_label"
                         android:textSize="14sp" app:layout_constraintTop_toTopOf="parent"
@@ -78,7 +77,6 @@
                         android:layout_width="163dp"
                         android:textAlignment="center"
                         android:layout_alignParentStart="true"
-                        android:layout_alignParentLeft="true"
                         android:layout_height="wrap_content"
                         android:id="@+id/food_label"
                         android:textSize="14sp" app:layout_constraintTop_toTopOf="parent"
@@ -88,13 +86,11 @@
                 <android.support.v7.widget.SwitchCompat
                         android:layout_width="wrap_content"
                         android:layout_height="56dp"
-                        android:layout_alignParentRight="true"
                         android:textAlignment="center"
                         app:trackTint="@color/colorPrimaryDark2"
                         android:id="@+id/food_switch"
                         app:layout_constraintEnd_toEndOf="parent"
                         android:theme="@style/switchTheme"
-                        android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                         app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintVertical_bias="0.0" android:layout_alignParentEnd="true"/>
 
@@ -109,11 +105,10 @@
                     app:layout_constraintEnd_toEndOf="@+id/food_layout" android:layout_marginTop="20dp"
                     app:layout_constraintTop_toBottomOf="@+id/food_layout" app:layout_constraintHorizontal_bias="1.0">
                 <TextView
-                        android:text="Recent Physical Activity"
+                        android:text="@string/recent_exercise"
                         android:layout_width="186dp"
                         android:textAlignment="viewStart"
                         android:layout_alignParentStart="true"
-                        android:layout_alignParentLeft="true"
                         android:layout_height="wrap_content"
                         android:id="@+id/exercise_label"
                         android:textSize="14sp" app:layout_constraintTop_toTopOf="parent"
@@ -123,13 +118,11 @@
                 <android.support.v7.widget.SwitchCompat
                         android:layout_width="wrap_content"
                         android:layout_height="56dp"
-                        android:layout_alignParentRight="true"
                         android:textAlignment="center"
                         app:trackTint="@color/colorPrimaryDark2"
                         android:id="@+id/exercise_switch"
                         app:layout_constraintEnd_toEndOf="parent"
                         android:theme="@style/switchTheme"
-                        android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                         app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintVertical_bias="0.0" android:layout_alignParentEnd="true"/>
 
@@ -149,7 +142,6 @@
                         android:layout_width="69dp"
                         android:textAlignment="center"
                         android:layout_alignParentStart="true"
-                        android:layout_alignParentLeft="true"
                         android:layout_height="wrap_content"
                         android:id="@+id/symptoms_title"
                         android:textSize="14sp"
@@ -309,7 +301,6 @@
                         android:layout_width="78dp"
                         android:textAlignment="center"
                         android:layout_alignParentStart="true"
-                        android:layout_alignParentLeft="true"
                         android:layout_height="16dp"
                         android:id="@+id/medications_title"
                         android:textSize="14sp"
@@ -346,7 +337,6 @@
                         android:layout_width="wrap_content"
                         android:textAlignment="center"
                         android:layout_alignParentStart="true"
-                        android:layout_alignParentLeft="true"
                         android:layout_height="16dp"
                         android:id="@+id/notes_title"
                         android:textSize="14sp"
