--- a/app/src/main/res/layout/content_account.xml
+++ b/app/src/main/res/layout/content_account.xml
@@ -10,7 +10,7 @@
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
             tools:context=".AccountActivity">
 
@@ -35,7 +35,6 @@
                     android:layout_height="24dp"
                     android:id="@+id/first_name_label"
                     android:textSize="18sp"
-                    android:paddingRight="5dp"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                     app:layout_constraintTop_toTopOf="parent"/>
@@ -183,7 +182,7 @@
                     android:layout_width="match_parent"
                     android:id="@+id/imageView1"
                     android:src="@drawable/avatar"
-                    android:scaleType="centerCrop"/>
+                    android:scaleType="centerCrop" android:contentDescription="@string/avatar_icon"/>
         </android.support.v7.widget.CardView>
 
 
