--- a/app/src/main/res/layout/content_day_view.xml
+++ b/app/src/main/res/layout/content_day_view.xml
@@ -7,7 +7,7 @@
         android:fillViewport="true">
     <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:showIn="@layout/app_bar_day_view"
             android:background="@color/colorPrimary"
@@ -71,7 +71,7 @@
             <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="8dp"
+                    android:layout_height="0dp" android:layout_weight="1" android:layout_marginTop="8dp"
                     android:layout_marginLeft="8dp" android:layout_marginRight="8dp">
                 <TextView
                         android:text="@string/day"
