--- a/app/src/main/res/layout/content_month_view.xml
+++ b/app/src/main/res/layout/content_month_view.xml
@@ -6,7 +6,7 @@
         android:fillViewport="true" xmlns:android="http://schemas.android.com/apk/res/android">
     <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:showIn="@layout/app_bar_month_view"
             android:background="@color/colorPrimary"
@@ -38,7 +38,7 @@
                     app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                     app:layout_constraintStart_toStartOf="parent" android:textColor="@color/scoreGood"/>
             <TextView
-                    android:text=" Monthly Score:"
+                    android:text="@string/monthly_score"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/score_label" android:layout_marginTop="24dp"
@@ -153,7 +153,7 @@
                 app:layout_constraintVertical_bias="0.0">
 
             <TextView
-                    android:text="Month"
+                    android:text="@string/month"
                     android:layout_width="wrap_content"
                     android:layout_height="24dp"
                     android:id="@+id/recent_label" android:textSize="18sp"
@@ -169,50 +169,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/recent_label"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp" android:id="@+id/recentLinearLayout">
-                <android.support.constraint.ConstraintLayout
-                        android:layout_width="match_parent"
-                        android:background="@drawable/recent_item"
-                        android:layout_height="wrap_content"
-                        android:clickable="true"
-                        android:id="@+id/sunday_container"
-                >
-
-                    <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" android:id="@+id/sunday_date"
-                            android:textSize="18sp"
-                            android:textColor="@color/colorPrimaryDark" android:text="March"
-                            android:layout_marginTop="8dp"
-                            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toEndOf="@+id/day_text_view" android:layout_marginStart="6dp"/>
-                    <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" android:id="@+id/day_text_view"
-                            android:textSize="18sp"
-                            app:layout_constraintStart_toStartOf="parent"
-                            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
-                            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="16dp"
-                            app:layout_constraintBottom_toBottomOf="parent" android:text="01"
-                            app:layout_constraintVertical_bias="0.454"/>
-                    <Button
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:id="@+id/sunday_score"
-                            android:elevation="0dp"
-                            style="?android:attr/borderlessButtonStyle"
-                            android:background="@drawable/score_circle_mini" android:textColor="@color/textDark"
-                            android:textSize="18sp"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            android:layout_marginTop="4dp" android:layout_marginBottom="4dp"
-                            android:layout_marginEnd="8dp" android:text="76"/>
-                </android.support.constraint.ConstraintLayout>
-
-
-            </LinearLayout>
+                    android:layout_marginEnd="8dp" android:id="@+id/recentLinearLayout"/>
             <TextView
                     android:text="@string/see_more"
                     android:layout_width="wrap_content"
