--- a/app/src/main/res/layout/content_week_view.xml
+++ b/app/src/main/res/layout/content_week_view.xml
@@ -7,7 +7,7 @@
         android:fillViewport="true">
     <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:showIn="@layout/app_bar_week_view"
             android:background="@color/colorPrimary"
@@ -37,7 +37,7 @@
                     app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                     app:layout_constraintStart_toStartOf="parent" android:textColor="@color/scoreGood"/>
             <TextView
-                    android:text="Weekly Score:"
+                    android:text="@string/weekly_score"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/score_label" android:layout_marginTop="24dp"
@@ -70,7 +70,7 @@
             <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="8dp"
+                    android:layout_height="0dp" android:layout_weight="1" android:layout_marginTop="8dp"
                     android:layout_marginLeft="8dp" android:layout_marginRight="8dp">
                 <TextView
                         android:text="@string/day"
@@ -163,7 +163,7 @@
                 app:layout_constraintVertical_bias="0.0">
 
             <TextView
-                    android:text="Week"
+                    android:text="@string/week"
                     android:layout_width="wrap_content"
                     android:layout_height="24dp"
                     android:id="@+id/recent_label" android:textSize="18sp"
