--- a/app/src/main/res/layout/day_item_layout.xml
+++ b/app/src/main/res/layout/day_item_layout.xml
@@ -37,5 +37,5 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="4dp" android:layout_marginBottom="4dp"
-            android:layout_marginEnd="8dp" android:text="76"/>
+            android:layout_marginEnd="8dp" android:text=""/>
 </android.support.constraint.ConstraintLayout>
