--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -158,7 +158,7 @@
                 app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0">
 
             <TextView
-                    android:text="@string/hints_label"
+                    android:text="@string/tips_label"
                     android:layout_width="wrap_content"
                     android:layout_height="24dp"
                     android:id="@+id/hints_label" android:textSize="18sp"
